# maia

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  dummy.py
.circleci/: .gitleaks.toml  build.sh  common.sh  config.yml  deploy.sh  exposed-secrets-warning.txt  gatling.sh  locust.sh  rollback.sh  run_test.sh
.github/workflows/: release.yml
apps/baynet/: Dockerfile  README.md  baynet_prediction.py  clean.py  get_score.py  istio_service_discovery.py  render.py  requirements.txt  service_relation.csv  structure_plot.html  (+3 more)
apps/deep-log/: .env  Dockerfile  README.md  aws_tools.py  cleansed_sock-shop_1686517944.json  data_cleaning.py  deep_log.py  deep_log_metrics.py  deep_log_predict.py  deep_log_train.py  deeplog_model_v10.pth  drain3.ini  drain_parser.py  loki.py  prometheus_push_metrics.py  pyproject.toml  redis_persistence.py  requirements.txt  sock-shop_1687692461.txt  testando_import.py  tool
apps/deep-log/kubernetes/: values.yaml
apps/deep-log/kubernetes/applications/: deep-log-external-secrets.yaml  values.yaml
apps/deep-log/logs/: get_logs.py
apps/deep-log/logs/sock-shop_logs/: sock-shop_2024-06-11 11.13.59.618003_0.txt  sock-shop_2024-06-17 11:13:59.618003_3.txt  sock-shop_2024-06-19 11.13.59.618003_4.txt  sock-shop_2024-06-21 11.13.59.618003_5.txt  sock-shop_2024-06-23 11.13.59.618003_6.txt  sock-shop_2024-06-24 11.13.05.036889_0.txt  sock-shop_2024-06-24 11.13.59.618003_7.txt
apps/deep-log/mock/: README.md  aws-local.sh
infrastructure/: README.md
preprocess/: data_cleaning.py  drain_parser.py  requirements.txt  sock-shop_test.txt
(+345 files in other folders)
