[tool.poetry]
name = "Marea Turbo Project"
version = "0.1.0"
description = "Metrics application data collection"
authors = ["diegopedroso@usp.br"]

[tool.poetry.dependencies]
python = "^3.9.7"
numpy = "^1.22.0"
torch-train = "^0.0.1"
torch = "^1.13.1"
argformat = "^0.0.1"
scikit_learn = "^1.2.0"
drain3 = "^0.9.11"
deeplog = "^0.0.3"
requests  =  "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"